<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/first_ground" android:checkableBehavior="single">
        <item android:id="@+id/nav_night_theme"
            android:title="@string/nav_switch_theme"
            android:icon="@drawable/ic_night_white_24dp"
            app:actionLayout="@layout/nav_item_switch_theme"
            app:showAsAction="always"/>
        <item android:id="@+id/nav_react_native"
            android:title="go to react native world"
            app:showAsAction="always"
            android:icon="@drawable/ic_new_world_black_24dp" />
        <item android:id="@+id/nav_scalpel_debug"
            android:title="scalpel debug"
            app:showAsAction="always"
            android:icon="@drawable/ic_build_black_24dp"
            app:actionLayout="@layout/nav_item_switch_theme"/>
    </group>
</menu>