<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <com.jakewharton.scalpel.ScalpelFrameLayout
        android:id="@+id/scalpel_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/content_ft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.jakewharton.scalpel.ScalpelFrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.DayNight"
        app:itemTextColor="?color_text_primary"
        app:itemBackground="?android:colorBackground"
        app:menu="@menu/menu_main"
        app:headerLayout="@layout/layout_nav_header" />
        
</android.support.v4.widget.DrawerLayout>
